# floatium

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  DIFFERENCES.md  INTERNALS.md  LICENSE  PARITY.md  README.md  dpo.md  floatium.pth  pyproject.toml
.github/workflows/: ci.yml  cpython-suite.yml  wheels.yml
bench/: bench_format.py  bench_json.py  bench_ns_per_op.py  bench_parse.py  bench_repr.py  corpora.py  run_all.sh
floatium/: __init__.py  __main__.py  _autopatch.py  _cli.py  _ext.pyi
src/: ext.cc  format_short.cc  slots.cc
src/backends/: fast_float_parse.cc  fmt_format.cc  fmt_opt_format.cc  registry.cc  ryu_opt_format.cc  stock_format.cc  stock_parse.cc  wuffs_parse.cc
src/common/: backend.h  format_short.h
src/cpython_adapter/: fast_float_strtod.cc  fmt_dtoa.cc  fmt_opt_dtoa.cc  pystrtod_ryu.h  pystrtod_wuffs.h  ryu_opt_dtoa.cc  wuffs_strtod.cc
tests/: conftest.py  test_autopatch.py  test_edge.py  test_parity.py  test_roundtrip.py
tests/cpython_suite/: README.md  conftest.py
tools/: run_stdlib_tests.py  sync_fast_float.sh  sync_fmt.sh  sync_from_cpython.sh  sync_ryu.sh  sync_wuffs.sh
